--- a/Websites/fermiumlabs_com/_includes/scripts.html
+++ b/Websites/fermiumlabs_com/_includes/scripts.html
@@ -3,6 +3,8 @@
 <script src="/Assets/js/parallax.js"></script>
 <script src="/Assets/js/scripts.js"></script>
 <script src="/Assets/js/custom.js"></script>
+<!-- Cookieconsent must be called pretty early to avoid glitches -->
+<script src="/Assets/js/cookieconsent.js"></script>
 <script>
 	window.addEventListener("beforeunload", function() {
 		document.body.classList.add("animate-out");
