--- a/Websites/fermiumlabs_com/_layouts/default.html
+++ b/Websites/fermiumlabs_com/_layouts/default.html
@@ -24,6 +24,8 @@ if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine
     {% include footer.html %}
     {% include scripts.html %}
 {% include cookieconsent.html %}
+{% include notifications.html %}
+
   </body>
 
 </html>
